[package]
name = "ls_plus"
authors = ["Sidati NOUHI"]
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
owo-colors = "4.2.1"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
chrono = "0.4.41"
tabled = "0.20.0"
# serde = { version = "1.0.219", features = ["derive"] }
# serde_json = "1.0.140"
